test/interaction/Issue1169.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-status-action "")
(agda2-info-action "*All Goals, Errors*" "?0 : foo L ?1 : List Nat ———— Error ————————————————————————————————————————————————— Issue1169.agda:12.1-15.34: error: [TerminationIssue] Termination checking failed for the following functions: foo Problematic calls: foo (suc N ∷ L) (at Issue1169.agda:15.19-22)" nil)
((last . 1) . (agda2-goals-action '(0 1)))
(agda2-status-action "")
(agda2-info-action "*Auto*" "No solution found" nil)
((last . 1) . (agda2-goals-action '(0 1)))
(agda2-give-action 1 "L")
((last . 1) . (agda2-goals-action '(0)))
